refactor: projects ranking
