# backend/openAPI.yaml
@@ -20,6 +20,7 @@ tags:
   - name: questions
   - name: avaliations
   - name: grades
+  - name: reports
 
 components:
   securitySchemes:
@@ -1638,6 +1639,10 @@ paths:
       responses:
         '204':
           description: Confirmation of successfully project avaliation.
+        '400':
+          $ref:  '#/components/responses/IncorrectToken'
+        '401':
+          $ref: '#/components/responses/UnauthorizedError'
   /grades/{avaliation_id}:
     get:
       summary: Gets all grades by avaliation id.
@@ -1687,6 +1692,36 @@ paths:
                       type: string
                       format: dateformat
                       example: "2020-07-02T21:57:00.421Z"
+        '400':
+          $ref:  '#/components/responses/IncorrectToken'
+        '401':
+          $ref: '#/components/responses/UnauthorizedError'
+
+  /reports/general:
+    get:
+      summary: Gets the general ranking report.
+      tags:
+        - reports
+      security:
+        - bearerAuth: []
+      responses:
+        '204':
+          description: Returns a PDF URL containing the general ranking report.
+        '400':
+          $ref:  '#/components/responses/IncorrectToken'
+        '401':
+          $ref: '#/components/responses/UnauthorizedError'
+
+  /reports/course:
+    get:
+      summary: Gets the ranking report by course.
+      tags:
+        - reports
+      security:
+        - bearerAuth: []
+      responses:
+        '204':
+          description: Returns a PDF URL containing the ranking report by course.
         '400':
           $ref:  '#/components/responses/IncorrectToken'
         '401':
